Aula-05-26/matrizTransposta/compiling_error.txt
/home/yovanycunha/Universidade/APLP/Aula-05-26/matrizTransposta/transposta.cpp:6:1: error: expected declaration before ‘}’ token
 }
 ^
